--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validation": "^3.0.8",
+    "joi": "^17.4.0",
     "mongoose": "^5.11.19",
     "path": "^0.12.7"
   },
